objects/vlocity_ins__CatalogRelationship__c.object
<CustomObject>
    <description>Associates a catalog category with a higher-level catalog. Catalogs are usually connected in a hierarchy, but catalog relationships enable reuse of portions of a catalog hierarchy under more than one higher-level catalog.</description>
    <fields>
        <fullName>vlocity_ins__ChildCatalogId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Child Catalog</label>
        <referenceTo>vlocity_ins__Catalog__c</referenceTo>
        <relationshipLabel>Catalog Relationships (Child Catalog)</relationshipLabel>
        <relationshipName>ChildCatalogRelationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ParentCatalogId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Catalog</label>
        <referenceTo>vlocity_ins__Catalog__c</referenceTo>
        <relationshipLabel>Catalog Relationships</relationshipLabel>
        <relationshipName>ParentCatalogRelationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Catalog Relationship</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>vlocity_ins__ChildCatalogId__c</columns>
        <columns>vlocity_ins__ParentCatalogId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Catalog Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalog Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>